--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsnd --respawn  src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rm -rf ./dist & tsc"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,7 @@
     "@types/koa-router": "^7.4.8",
     "@types/koa__cors": "^5.0.0",
     "@types/koa__router": "^12.0.4",
+    "@types/node": "^22.13.8",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0"
   },
@@ -21,6 +23,7 @@
     "@koa/bodyparser": "^5.1.1",
     "@koa/cors": "^5.0.0",
     "@types/koa": "^2.15.0",
+    "axios": "^1.8.1",
     "koa": "^2.16.0",
     "koa-body": "^6.0.1",
     "koa-combine-routers": "^4.0.2",
