--- a/package.json
+++ b/package.json
@@ -11,22 +11,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@types/koa-router": "^7.4.8",
-    "@types/koa__cors": "^5.0.0",
-    "@types/koa__router": "^12.0.4",
-    "@types/node": "^22.13.8",
-    "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0"
-  },
-  "dependencies": {
-    "@koa/bodyparser": "^5.1.1",
-    "@koa/cors": "^5.0.0",
-    "@types/koa": "^2.15.0",
-    "axios": "^1.8.1",
-    "koa": "^2.16.0",
-    "koa-body": "^6.0.1",
-    "koa-combine-routers": "^4.0.2",
-    "koa-router": "^13.0.1"
-  }
+  "devDependencies": {},
+  "dependencies": {}
 }
