--- a/package.json
+++ b/package.json
@@ -10,7 +10,19 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "devDependencies": {},
-  "dependencies": {}
+  "license": "MIT",
+  "dependencies": {
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "multer": "1.4.5-lts.1"
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.19.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.8.2"
+  }
 }
