--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "preserveConstEnums": true,
     "sourceMap": true,
     "outDir": "./dist",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "allowJs": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.spec.ts", "data"]
