--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "license": "ISC",
   "devDependencies": {
     "@types/koa-router": "^7.4.8",
+    "@types/koa-static": "^4.0.4",
     "@types/koa__cors": "^5.0.0",
     "@types/koa__router": "^12.0.4",
+    "@types/nanoid": "^3.0.0",
     "@types/node": "^22.13.8",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0"
@@ -24,9 +26,12 @@
     "@koa/cors": "^5.0.0",
     "@types/koa": "^2.15.0",
     "axios": "^1.8.1",
+    "dotenv": "^16.4.7",
     "koa": "^2.16.0",
     "koa-body": "^6.0.1",
     "koa-combine-routers": "^4.0.2",
-    "koa-router": "^13.0.1"
+    "koa-router": "^13.0.1",
+    "koa-static": "^5.0.0",
+    "nanoid": "^5.1.2"
   }
 }
