--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/koa-router": "^7.4.8",
+    "@types/koa-send": "^4.1.6",
     "@types/koa-static": "^4.0.4",
     "@types/koa__cors": "^5.0.0",
     "@types/koa__router": "^12.0.4",
@@ -31,6 +32,7 @@
     "koa-body": "^6.0.1",
     "koa-combine-routers": "^4.0.2",
     "koa-router": "^13.0.1",
+    "koa-send": "^5.0.1",
     "koa-static": "^5.0.0",
     "nanoid": "^5.1.2"
   }
